<resources>
    <string name="app_name">DataStorageAssignment</string>
    <string name="action_settings">Settings</string>
    <string name="mainAct_title">Data Storage</string>
    <string name="title_activity_sqlite_view">SQLiteView</string>
    <string name="SQLiteViewTitle">SQLiteView</string>
    <string name="blogMsg_lbl">Blog Message:</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="preferences">Preferences</string>
    <string name="sqlite">SQLite</string>
    <string name="results">No Preferences</string>
    <string name="title_activity_pref_view">PrefView</string>
    <string name="Pref_storage_view">Preference Storage View</string>
    <string name="book">Book Name</string>
    <string name="author">Book Author</string>
    <string name="desc">Description</string>


</resources>
