<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.sjsu.karthik.datastorageassignment.PrefView"
    tools:showIn="@layout/activity_pref_view"
    android:background="@color/blue">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/book"
        android:id="@+id/textView5"
        android:layout_marginTop="50dp"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:layout_below="@+id/imageView3"
        android:layout_toRightOf="@+id/imageView3"
        android:layout_toEndOf="@+id/imageView3" />

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/imageView3"
        android:src="@drawable/sjsu"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/author"
        android:id="@+id/textView6"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:layout_alignTop="@+id/authorTxt"
        android:layout_alignRight="@+id/textView5"
        android:layout_alignEnd="@+id/textView5" />

    <EditText
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:id="@+id/bookTxt"
        android:background="@color/white"
        android:layout_alignTop="@+id/textView5"
        android:layout_alignLeft="@+id/descTxt"
        android:layout_alignStart="@+id/descTxt" />

    <EditText
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:id="@+id/authorTxt"
        android:background="@color/white"
        android:layout_marginTop="48dp"
        android:layout_below="@+id/bookTxt"
        android:layout_toRightOf="@+id/textView6"
        android:layout_toEndOf="@+id/textView6"
        android:layout_marginLeft="35dp"
        android:layout_marginStart="35dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/desc"
        android:id="@+id/textView7"
        android:textColor="@color/white"
        android:layout_marginTop="32dp"
        android:textSize="20dp"
        android:layout_alignTop="@+id/descTxt"
        android:layout_alignLeft="@+id/textView6"
        android:layout_alignStart="@+id/textView6" />

    <EditText
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:id="@+id/descTxt"
        android:background="@color/white"
        android:inputType="textMultiLine"
        android:layout_marginBottom="37dp"
        android:layout_above="@+id/button2"
        android:gravity="start"
        android:layout_alignLeft="@+id/authorTxt"
        android:layout_alignStart="@+id/authorTxt" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/button"
        android:onClick="savePref"
        android:background="@color/white"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/imageView3"
        android:layout_toEndOf="@+id/imageView3"
        android:layout_marginBottom="54dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:id="@+id/button2"
        android:background="@color/white"
        android:layout_alignTop="@+id/button"
        android:layout_alignRight="@+id/authorTxt"
        android:layout_alignEnd="@+id/authorTxt"
        android:onClick="reset"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Pref_storage_view"
        android:id="@+id/textView8"
        android:textColor="@color/white"
        android:layout_alignBottom="@+id/imageView3"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


</RelativeLayout>
