<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.sjsu.karthik.datastorageassignment.MainActivity"
    tools:showIn="@layout/activity_main"
    android:background="@color/blue">

    <ImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:src="@drawable/sjsu"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/mainAct_title"
        android:id="@+id/textView"
        android:layout_marginLeft="56dp"
        android:layout_marginStart="56dp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/imageView"
        android:layout_toEndOf="@+id/imageView"
        android:layout_marginTop="28dp"
        android:textColor="@color/white" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/preferences"
        android:id="@+id/prefBtn"
        android:background="@color/white"
        android:textSize="20dp"
        android:gravity="fill"
        android:textAllCaps="false"
        android:textAlignment="center"
        android:onClick="gotoPrefView"
        android:layout_below="@+id/imageView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="33dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sqlite"
        android:id="@+id/sqlBtn"
        android:background="@color/white"
        android:textSize="20dp"
        android:textAllCaps="false"
        android:gravity="fill"
        android:textAlignment="center"
        android:onClick="gotoSQLiteView"
        android:layout_alignTop="@+id/prefBtn"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/results"
        android:id="@+id/resultTxt"
        android:textColor="@color/white"
        android:layout_below="@+id/prefBtn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="52dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Close"
        android:id="@+id/button"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/sqlBtn"
        android:layout_alignEnd="@+id/sqlBtn"
        android:onClick="exit"
        android:textAllCaps="false"
        android:gravity="fill"
        android:textAlignment="center"
        android:layout_marginBottom="73dp"
        android:background="@color/white"/>


</RelativeLayout>
